<resources>
    <string name="app_name">AppMascShop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Juan Perez Garia</string>
    <string name="nav_header_subtitle">jperez@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logouth">Cerrar Sesión</string>

    <!--Sólo muestra para el cliente-->
    <string name="menu_home">Principal</string>
    <!--Muestra para el cliente(sólo sus pedidos) y ADM(todos los pedidos)-->
    <string name="menu_gallery">Pedidos</string>
    <!--Sólo muestra para el cliente-->
    <string name="menu_slideshow">Dirección de entregas</string>
    <string name="menu_categoria">Categoría Productos</string>
    <string name="menu_producto">Productos</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Spiner categoria temporal -->
    <string name="spinnerTipo1">Categoria 1</string>
    <string name="spinnerTipo2">Categoria 2</string>
    <string name="spinnerTipo3">Categoria 3</string>
    <string name="spinnerTipo4">Categoria 4</string>
</resources>