<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.pjapp.appmascshop.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.pjapp.appmascshop.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.pjapp.appmascshop.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_categoria"
        android:name="com.pjapp.appmascshop.ui.admin.CategoriaProducto"
        android:label="@string/menu_categoria"
        tools:layout="@layout/fragment_categoria_producto" />
    <fragment
        android:id="@+id/nav_producto"
        android:name="com.pjapp.appmascshop.ui.admin.Producto"
        android:label="@string/menu_producto"
        tools:layout="@layout/fragment_producto" />
</navigation>